--- a/UniTarjeta/war/WEB-INF/web.xml
+++ b/UniTarjeta/war/WEB-INF/web.xml
@@ -25,6 +25,10 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 		<servlet-class>es.upm.dit.isst.unitarjeta.LoginServlet</servlet-class>
 	</servlet>
 	<servlet>
+		<servlet-name>CerrarSesion</servlet-name>
+		<servlet-class>es.upm.dit.isst.unitarjeta.CerrarSesionServlet</servlet-class>
+	</servlet>
+	<servlet>
 		<servlet-name>Welcome</servlet-name>
 		<servlet-class>es.upm.dit.isst.unitarjeta.WelcomeServlet</servlet-class>
 	</servlet>
@@ -194,6 +198,10 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	<servlet-mapping>
 		<servlet-name>Login</servlet-name>
 		<url-pattern>/login</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>CerrarSesion</servlet-name>
+		<url-pattern>/cerrarSesion</url-pattern>
 	</servlet-mapping>
 	<servlet-mapping>
 		<servlet-name>Welcome</servlet-name>
